eks/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: deliverit-front-admin-service
spec:
    selector:
        app: deliverit-front-admin
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 80
          targetPort: 3000
