eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
    name: nginx
spec:
    controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: deliverit-ingress
    annotations:
        kubernetes.io/ingress.class: nginx
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  - path: '/admin'
                    pathType: Prefix
                    backend:
                        service:
                            name: deliverit-front-admin-service
                            port:
                                number: 80
                  - path: '/'
                    pathType: Prefix
                    backend:
                        service:
                            name: deliverit-api-service
                            port:
                                number: 80
